--- a/main-page.html
+++ b/main-page.html
@@ -1,33 +1,71 @@
-<style>
-  .smaller-image {
-    width: 100px;
-  }
-</style>
+<DOCTYPE html>
+  <html lang="eng">
+    <head>
+          <meta name="viewport" content="width=device-width, initial-scale=1">
+          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    </head>
+    <body>
+      <style>
+        .smaller-image {
+          width: 100px;
+        }
+        .bg-1{
+          background-color: lightgray;
+          margin: 80px 80px 80px 80px;
+          padding: 25px 25px 25px 25px;
+          border-radius: 2%;
+        }
+        
+        .ul {
+          color: blue;
+        }
+      </style>
 
 
-<!-- Do not edit under this line-->
-<h1 id="header " class="center">Name</h1>
-<h2> Elon </h2>
-<h4>Bio</h4>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-<h3>Timeline:</h3
-<ul>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-</ul>
-<img src="  " class="smaller-image" alt="Lorem Ispum">
+   
+    <div class="bg-1 text-center">
+    <h1 id="header" class="text-center">Elon Musk</h1>
+    <h4>Bio</h4>
+    <p>Musk is the founder, CEO, and CTO of SpaceX; a co-founder, a Series A investor, CEO, and product architect of
+       Tesla Inc.; co-chairman of OpenAI; founder and CEO of Neuralink. He was previously co-founder and chairman of 
+       SolarCity; co-founder of Zip2; and founder of X.com, which merged with Confinity and took the name PayPal. As of 
+       July 2017, he has an estimated net worth of $16.1 billion, making him the 80th-wealthiest person in the world.
+       In December 2016, Musk was ranked 21st on the Forbes list of The World's Most Powerful People.
+       Musk has stated that the goals of SolarCity, Tesla, and SpaceX revolve around his vision to change the world and humanity. 
+       His goals include reducing global warming through sustainable energy production and consumption, and reducing the "risk of
+       human extinction" by "making life multiplanetary" by establishing a human colony on Mars. In addition to his 
+       primary business pursuits, he has also envisioned a high-speed transportation system known as the Hyperloop, 
+       and has proposed a VTOL supersonic jet aircraft with electric fan propulsion, known as the Musk electric jet.      
+       Musk also proposed the concept of The Boring Company in 2017.</p>
+    <h3>Timeline:</h3>
+    <ul class="centered">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/Elon_Musk_2015.jpg/330px-Elon_Musk_2015.jpg" class="smaller-image" alt="Lorem Ispum">
 
-<h3>Fun facts</h3>
-<ul>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-</ul>
-<p>Learn more about<a href=""> Name</a> on Wikipedia</p>
+    <h3>Fun facts
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+    </h3>
+
+    <p>Learn more about<a target="_blank" href="https://en.wikipedia.org/wiki/Elon_Musk"> Elon</a> on Wikipedia</p>
+
+    </div>
+
+    </body>
+
+</html>
